adding in observations

--- a/HeroesOfPymoli/HeroesOfPymoli_CTon.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_CTon.ipynb
@@ -6738,7 +6738,9 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -6834,11 +6836,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Observations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- There is a slightly higher average purchase price for females\n",
+    "- 20 - 24 year olds make up the highest percentage of players and should be the main focus demo\n"
+   ]
   }
  ],
  "metadata": {
